# thesis-new-files

./: .gitignore  AGENT_REPORTS_REVIEW_GUIDE.md  AppendixNonRNN_Methodology.tex  AppendixX_Setup_Guide.tex  AttachmentX_Setup_Guide.tex  BUG_FIX_TESTING_GUIDE.md  BUG_INVESTIGATION_REPORT.md  BUG_REPORT.md  BUG_SUMMARY.txt  CLAUDE.md  CODE_FIX.md  Chapter7_Software_Implementation.tex  EXERCISE_TIME_INVESTIGATION.md  FACTOR_TESTING_README.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  PAYOFF_INTEGRATION_SUMMARY.md  README.md  REAL_DATA_METHODOLOGY.md  REAL_DATA_METHODOLOGY.tex  STOCK_MODEL_BUG_FIXES.md  STOCK_MODEL_BUG_REPORT.md  STREAMLIT_README.md  TESTING_SUMMARY.md  TESTING_SUMMARY.txt  VALIDATION_REPORT.html  VALIDATION_TEST_PLAN.md  WRITE_EXCEL_WRITE_FIGURES_TEST_REPORT.md  app.py  appendix_how_to_run.tex  compare_lsm.py  debug_exercise_times.py  debug_lsm.py  debug_pricing.py  debug_stored_models.py  factor_quick_test_results.csv  lsm_basis_comparison.csv  lsm_basis_comparison_deg2_3.csv  payoffs_index.tex  presentation.py  (+10 more)
.claude/: settings.local.json
backend/: DEPLOYMENT.md  app.py  main.py  requirements.txt
data/: README.md
data/stored_paths/: README.md
docs/: README.md  RealDataModel_Documentation.md  TREE_ALGORITHMS_DOCUMENTATION.md  appendix_code_usage.tex
experiments/: README.md
experiments/configs/: __init__.py  thesis_chapter4.py
frontend/: .dockerignore  .env.example  .env.local.example  .gitignore  .prettierignore  API_INTEGRATION_SUMMARY.md  COMPLETE_PAYOFF_CATALOG.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.txt  DEPLOYMENT_QUICK_START.md  DEPLOYMENT_REQUIREMENTS.md  Dockerfile  INDEX.md  PAYOFF_QUICK_REFERENCE.md  PAYOFF_REGISTRY_SUMMARY.md  PAYOFF_SELECTOR_EXAMPLE.tsx  QUICK_DEPLOY.md  README.md  REALDATA_INTEGRATION.md  REALDATA_SUMMARY.md  TEST_EXECUTION_REPORT.md  TEST_FILES_INDEX.md  TEST_QUICK_START.md  TEST_SCRIPT_DOCUMENTATION.md  VERCEL_CHECKLIST.md  VERCEL_SETUP_SUMMARY.md  api-requirements.txt  index.html  next.config.mjs  package-lock.json  package.json  requirements.txt  tailwind.config.js  test-integration.sh  vercel.json
frontend/api/: README.md  health.py  price.py  (+3 more)
optimal_stopping/: __init__.py  test phase 2.py  test phase1.py  test_payoffs_basic.py
optimization/: README.md  objective.py
(+239 files in other folders)
